updated with automated pages navigation

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- base -->
     <link rel="stylesheet" href="./css/base/base.css">
     <link rel="stylesheet" href="./css/base/layout.css">
-    <!-- base -->
-    <link rel="stylesheet" href="">
     <!-- components -->
-    <!-- vendors -->
-    <!-- page -->
+    <link rel="stylesheet" href="./css/components/header.css">
+    <link rel="stylesheet" href="./css/components/services.css">
+    <!-- vendors / 3rd-party -->
+    <!-- page / custom -->
+    <link rel="stylesheet" href="./css/pages/home.css">
 </head>
 
 <body>
