updated with forms

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <!-- components -->
     <link rel="stylesheet" href="./css/components/header.css">
     <link rel="stylesheet" href="./css/components/services.css">
+    <link rel="stylesheet" href="./css/components/table.css">
+    <link rel="stylesheet" href="./css/components/form.css">
     <!-- vendors / 3rd-party -->
     <!-- page / custom -->
     <link rel="stylesheet" href="./css/pages/home.css">
